Fixed overlap of footer and contact form across medias

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
 
-body {
+
+
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -17,7 +17,9 @@ body {
     background-attachment: fixed;
     line-height: 1.6;
     transition: background 0.5s ease, color 0.5 ease;
+    flex-direction: column;
 }
+
 
 .scaled-img {
     width: 100%;
@@ -96,12 +98,14 @@ footer {
     text-align: center;
     position: fixed;
     bottom: 0;
+    height: 5%;
     width: 100%;
+
 }
 
 form {
+    max-width: 100%;
     max-width: 600px;
-    margin: 0 auto;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -133,13 +137,13 @@ button:hover {
     }
 
     header, footer {
-        padding: 10px;
+        padding: 5px;
     }
 
     nav ul li {
         display: block;
         text-align: center;
-        margin: 5px 0;
+        margin: 5px;
     }
     
     section {
@@ -150,16 +154,16 @@ button:hover {
 
 @media only screen and (min-width: 1200px) {
     body {
-        font-size: 18px;
+        font-size: 14px;
     }
 
     header, footer {
-        padding: 20px;
+        padding: 5px;
     }
     nav ul li {
         display: inline-block;
-        padding: 20px;
-        margin: 20px;
+        padding: 5px;
+        margin: 10px;
     }
 }
 
@@ -322,3 +326,13 @@ body.dark-mode button:hover {
     .info-button:hover {
         background-color: #45a049;
     }
+
+#contact {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 70px;
+    padding-left: 20px;
+
+    
+}
